--- a/cpp_06/ex02/Makefile
+++ b/cpp_06/ex02/Makefile
@@ -5,18 +5,18 @@
 #                                                     +:+ +:+         +:+      #
 #    By: kgezgin <kgezgin@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2023/10/12 09:41:23 by kgezgin           #+#    #+#              #
-#    Updated: 2023/12/16 11:39:27 by kgezgin          ###   ########.fr        #
+#    Created: 2023/12/20 15:03:21 by kgezgin           #+#    #+#              #
+#    Updated: 2023/12/20 15:44:29 by kgezgin          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 OBJS_DIR = objs
 
-SRCS = main.cpp Bureaucrat.cpp AForm.cpp PresidentialPardonForm.cpp RobotomyRequestForm.cpp ShrubberyCreationForm.cpp\
+SRCS = main.cpp Mandatory.cpp\
 
 OBJS = $(addprefix $(OBJS_DIR)/, $(SRCS:.cpp=.o))
 
-NAME = Bureaucrats
+NAME = Identify
 
 CC = c++
 CFLAGS = -Wall -Werror -Wextra -std=c++98  -g #-fsanitize=address
